--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,15 @@ select {
 .no-spinners {
   -moz-appearance: textfield;
 }
+
+/* Hide spinners in Chrome, Safari, Edge, and Opera */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Hide spinners in Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
